# G.Genulse-Arcodular

./: .gitignore  Cargo.toml  README.md  README_v1.1_STABLE.md
genesis_brain/: Cargo.toml
genesis_brain/src/: lib.rs  main.rs
genesis_togenizer/: Cargo.toml  test.rs  test_wasm.html
genesis_togenizer/src/: main.rs
genesis_togenizer/www/: final-test.html  package.json
genesis_togenizer/www/src/: App.tsx
genulse_core/: Cargo.toml
genulse_core/src/: arc.rs  lib.rs
togen/src/: lib.rs
togen/tests/: similarity_test.rs
togen/www/: package-lock.json  package.json  vite.config.ts
togen/www/src/: App.tsx
togen/www/src/components/: GenesisGraph.tsx
